vest-dsl/test/bad/size_expr_undefined.vest
// Invalid: undefined type in size expression
foo = {
    data: [u8; |undefined_type|],
}
